Fix: overlapping custom and actual range slider

--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,6 @@ header p {
 
 #pageviews-slider {
   width: 100%;
-  margin-top: 5em;
   opacity: 0;
   cursor: pointer;
 }
